--- a/2015cp_hw_w4.html
+++ b/2015cp_hw_w4.html
@@ -106,6 +106,7 @@
 <iframe src="simplest2.html" width="500" height="300"></iframe>
 
 <p><a href="simplest2.html" target="_blank">作業一投影片</a></p>
+<p><img src="https://copy.com/hYbOzjFFyFVoaX0W"width="450"height="450"></p>
             </div>
             <!-- /.entry-content -->
     <hr/>
