--- a/authors.html
+++ b/authors.html
@@ -66,7 +66,7 @@
         <div class="col-sm-9">
 
     <h1>Authors on 2015FALL KMOL 課程</h1>
-        <li><a href="./author/40323243.html">40323243</a> (3)</li>
+        <li><a href="./author/40323243.html">40323243</a> (8)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -96,6 +96,21 @@
         <li class="list-group-item">
             <a href="http://python.org/" target="_blank">
                 Python
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="https://github.com/40323243/roger2/tree/gh-pages" target="_blank">
+                我的GitHub
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="http://2015fallhw.github.io/2015fallcadpb/user/40323243/" target="_blank">
+                班級個人User網站
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="http://2015fallhw.github.io/2015fallcadpb/category/g5.html" target="_blank">
+                分組G5作業網站
             </a>
         </li>
         <li class="list-group-item">
