--- a/index.html
+++ b/index.html
@@ -66,23 +66,58 @@
         <div class="col-sm-9">
 
             <article>
-                <h2><a href="./2015cp_hw_w5.html">2015 計算機程式 第五週</a></h2>
+                <h2><a href="./2015cp_hw_w16.html">2015 計算機程式 第十六週作業</a></h2>
+                <div class="summary"><p>作業W16摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w16.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="./2015cp_hw_w15.html">2015 計算機程式 第十五週作業</a></h2>
+                <div class="summary"><p>作業W15摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w15.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="./2015cp_hw_w14.html">2015 計算機程式 第十四週作業</a></h2>
+                <div class="summary"><p>作業W14摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w14.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="./2015cp_hw_w12.html">2015 計算機程式 第十二週作業</a></h2>
+                <div class="summary"><p>作業W12摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w12.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="./2015cp_hw_w11.html">2015 計算機程式 第十一週作業</a></h2>
+                <div class="summary"><p>作業W11摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w11.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="./2015cp_hw_w5.html">2015 計算機程式 第五週作業</a></h2>
                 <div class="summary"><p>作業W5摘要</p>
                     <a class="btn btn-default btn-xs" href="./2015cp_hw_w5.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="./2015cp_hw_w1.html">2015 計算機程式 作業一</a></h2>
-                <div class="summary"><p>作業一摘要</p>
-                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w1.html">more ...</a>
+                <h2><a href="./2015cp_hw_w4.html">2015 計算機程式 第四週作業</a></h2>
+                <div class="summary"><p>作業W4摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w4.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="./2015cp_hw_w4.html">2015 計算機程式 第四週</a></h2>
-                <div class="summary"><p>作業W4摘要</p>
-                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w4.html">more ...</a>
+                <h2><a href="./2015cp_hw_w1.html">2015 計算機程式 第一周作業</a></h2>
+                <div class="summary"><p>作業一摘要</p>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w1.html">more ...</a>
                 </div>
             </article>
             <hr/>
@@ -116,6 +151,21 @@
         <li class="list-group-item">
             <a href="http://python.org/" target="_blank">
                 Python
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="https://github.com/40323243/roger2/tree/gh-pages" target="_blank">
+                我的GitHub
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="http://2015fallhw.github.io/2015fallcadpb/user/40323243/" target="_blank">
+                班級個人User網站
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="http://2015fallhw.github.io/2015fallcadpb/category/g5.html" target="_blank">
+                分組G5作業網站
             </a>
         </li>
         <li class="list-group-item">
