--- a/2015cp_hw_w4.html
+++ b/2015cp_hw_w4.html
@@ -2,7 +2,7 @@
 <html lang="en"
 >
 <head>
-    <title>2015 計算機程式 第四週 - 2015FALL KMOL 課程</title>
+    <title>2015 計算機程式 第四週作業 - 2015FALL KMOL 課程</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
 
         <meta property="og:site_name" content="2015FALL KMOL 課程" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="2015 計算機程式 第四週"/>
+        <meta property="og:title" content="2015 計算機程式 第四週作業"/>
         <meta property="og:url" content="./2015cp_hw_w4.html"/>
         <meta property="og:description" content="作業W4摘要"/>
         <meta property="article:published_time" content="2015-11-03" />
@@ -78,8 +78,8 @@
                 <h1>
                     <a href="./2015cp_hw_w4.html"
                        rel="bookmark"
-                       title="Permalink to 2015 計算機程式 第四週">
-                        2015 計算機程式 第四週
+                       title="Permalink to 2015 計算機程式 第四週作業">
+                        2015 計算機程式 第四週作業
                     </a>
                 </h1>
             </header>
@@ -101,11 +101,11 @@
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p>以下為作業一內容</p>
+                <p>以下為作業四內容</p>
 <p>利用 iframe 嵌入投影片:</p>
-<iframe src="simplest2.html" width="500" height="300"></iframe>
+<iframe src="simplest4.html" width="500" height="300"></iframe>
 
-<p><a href="simplest2.html" target="_blank">作業一投影片</a></p>
+<p><a href="simplest4.html" target="_blank">作業四投影片</a></p>
 <p><img src="https://copy.com/hYbOzjFFyFVoaX0W"width="450"height="450"></p>
             </div>
             <!-- /.entry-content -->
@@ -171,6 +171,21 @@
         <li class="list-group-item">
             <a href="http://python.org/" target="_blank">
                 Python
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="https://github.com/40323243/roger2/tree/gh-pages" target="_blank">
+                我的GitHub
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="http://2015fallhw.github.io/2015fallcadpb/user/40323243/" target="_blank">
+                班級個人User網站
+            </a>
+        </li>
+        <li class="list-group-item">
+            <a href="http://2015fallhw.github.io/2015fallcadpb/category/g5.html" target="_blank">
+                分組G5作業網站
             </a>
         </li>
         <li class="list-group-item">
