--- a/2015cp_hw_w14.html
+++ b/2015cp_hw_w14.html
@@ -107,8 +107,10 @@
 
 <p><a href="simplest14.html" target="_blank">作業十四投影片</a>
 <br/>
-<br/>
-  <iframe src="https://player.vimeo.com/video/150550971" width="500" height="283" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/150550971">bandicam 2016-01-03 06-30-49-179</a> from <a href="https://vimeo.com/user45620742">曾彥鈞</a> on <a href="https://vimeo.com">Vimeo</a>.</p></p>
+<br/></p>
+<p><img src="https://copy.com/2hi4dGbDs9TammMS"width="450"height="450">
+<br/></p>
+<p><iframe src="https://player.vimeo.com/video/150550971" width="500" height="283" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/150550971">bandicam 2016-01-03 06-30-49-179</a> from <a href="https://vimeo.com/user45620742">曾彥鈞</a> on <a href="https://vimeo.com">Vimeo</a>.</p></p>
             </div>
             <!-- /.entry-content -->
     <hr/>
