--- a/2015cp_hw_w15.html
+++ b/2015cp_hw_w15.html
@@ -107,8 +107,10 @@
 
 <p><a href="simplest15.html" target="_blank">作業五投影片</a>
 <br/>
-<br/>
-  <iframe src="https://player.vimeo.com/video/150553831" width="500" height="283" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/150553831">bandicam 2016-01-03 07-29-41-990</a> from <a href="https://vimeo.com/user45620742">曾彥鈞</a> on <a href="https://vimeo.com">Vimeo</a>.</p></p>
+<br/></p>
+<p><img src="https://copy.com/TyIatioQfG4q4aYx"width="450"height="450">
+<br/></p>
+<p><iframe src="https://player.vimeo.com/video/150553831" width="500" height="283" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/150553831">bandicam 2016-01-03 07-29-41-990</a> from <a href="https://vimeo.com/user45620742">曾彥鈞</a> on <a href="https://vimeo.com">Vimeo</a>.</p></p>
             </div>
             <!-- /.entry-content -->
     <hr/>
