--- a/simplest12.html
+++ b/simplest12.html
@@ -31,7 +31,7 @@
 	
 <section>
     <h1>心得和自評</h1>
-    <p>這次作業運用到3D製圖的軟體，因為以前的高職有學過，所以畫起來比較容易，沒有像之前的作業那麼難做，自評分數:75</p>
+    <p>複製檔案有點大，所以一個一個複製有一點花時間，不過用心一點還是可以複製完的，自評分數:70</p>
     
 </section>
 				
