--- a/simplest16.html
+++ b/simplest16.html
@@ -31,7 +31,7 @@
 	
 <section>
     <h1>心得和自評</h1>
-    <p>這次作業運用到3D製圖的軟體，因為以前的高職有學過，所以畫起來比較容易，沒有像之前的作業那麼難做，自評分數:75</p>
+    <p>全部的作業我覺得我期末作得比較認真，因為是畫圖我比較有興趣，雖然畫圖能力不是很好，畫的部分在團體裡是畫比較簡單的，但是我覺得在簡單的圖也是自己一手畫出來的特別有成就感，自評分數:70</p>
     
 </section>
 				
