--- a/simplest11.html
+++ b/simplest11.html
@@ -31,7 +31,7 @@
 	
 <section>
     <h1>心得和自評</h1>
-    <p>這次作業運用到3D製圖的軟體，因為以前的高職有學過，所以畫起來比較容易，沒有像之前的作業那麼難做，自評分數:75</p>
+    <p>因為我們這組有分配工作，我被分到的是畫零件1，因為我不太會畫那個軟體，所以同組的幫我挑一個比較容易得讓我畫，畫好的時候會有一種莫名的成就感，而且幫組員貢獻一張圖，自評分數:70</p>
     
 </section>
 				
