--- a/simplest14.html
+++ b/simplest14.html
@@ -31,7 +31,7 @@
 	
 <section>
     <h1>心得和自評</h1>
-    <p>這次作業運用到3D製圖的軟體，因為以前的高職有學過，所以畫起來比較容易，沒有像之前的作業那麼難做，自評分數:75</p>
+    <p>這次作業跟第11週類似，只差在軟體用的是不一樣的，所以花的時間比較少，很快就能上手很快就能完成這次的作業。自評分數:70</p>
     
 </section>
 				
