--- a/simplest15.html
+++ b/simplest15.html
@@ -31,7 +31,7 @@
 	
 <section>
     <h1>心得和自評</h1>
-    <p>這次作業運用到3D製圖的軟體，因為以前的高職有學過，所以畫起來比較容易，沒有像之前的作業那麼難做，自評分數:75</p>
+    <p>這次作業是將隊上零件圖組成組合圖，這個軟體超作比較麻煩，因為要一直固定，圖很難移動，所以我練了很久才開始作錄影的部分，自評分數:70</p>
     
 </section>
 				
